# personal-website

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  CNAME  README.md  a-new-chapter-for-technical-writing.html  archives.html  authors.html  categories.html  discord-bots-in-python.html  feed.xml  how-to-use-fastapi-for-microservices.html  index.html  mise.toml  polymorphic-models-in-django.html  providing-feature-handlers-in-an-elegant-way-in-python.html  pyproject.toml  tags.html
.github/workflows/: pages.yml
.github/workflows/composite/setup-env/: action.yml
author/: lukasz-zmudzinski.html
category/: articles.html
drafts/: a-new-chapter-for-technical-writing.html  discord-bots-in-python.html  how-to-use-fastapi-for-microservices.html  polymorphic-models-in-django.html  providing-feature-handlers-in-an-elegant-way-in-python.html
feeds/: all-en.atom.xml  all.atom.xml  articles.atom.xml  lukasz-zmudzinski.atom.xml  lukasz-zmudzinski.rss.xml
pages/: about.html  family.html  projects.html
personal_website/animal/: dto.py  mapper.py  repository.py
personal_website/content/articles/: 2016_08_20_hello.md  2016_08_27_commits.md  2017_03_31_nxt_robot_navigation.md  2017_03_31_rough_mereology_nxt.md  2017_10_23_ros_windows.md  2017_11_20_iota_hackathon.md  2017_12_04_transform_camera.md  2017_12_04_transform_forward_camera_to_top_view.md  2018_02_15_perception_for_robotics.md  2018_02_15_robotics_perception.md  2019_03_22_p_controller.md  2019_04_08_minimalism.md  2019_05_06_thirty_years.md  2019_06_04_cnn_cactus.md  2019_09_09_base_model_django.md  2019_09_16_sql_pandas.md  2019_10_03_wsl_data_science.md  2019_10_07_govtech.md  2019_10_21_pycode.md  2019_11_12_ghost_day.md  2019_11_18_wow_data.md  2019_11_20_wow_services.md  2019_11_22_wow_heroku.md  2020_01_07_tdd_django.md  2020_06_17_wow_prediction.md  2020_07_10_solid.md  2020_07_13_monte_carlo.md  2020_09_15_potential_fields.md  2020_10_10_slam.md  2020_10_31_phd_dropout.md  2020_12_31_year_review.md  2021_02_24_django_polymorphic.md  2021_05_17_feature_handlers.md  2021_11_18_fastapi_microservices.md  2022_05_20_discord_bots.md  2025_07_21_new_chapter.md  2025_11_09_new_chapter.md  2026_02_10_new_beginning.md  2026_02_10_scraping_dynamic_pages.md  2026_02_19_scraping_dynamic_pages.md
personal_website/content/pages/: 404.md  about.md  family.md  resume.md
personal_website/core/: exception.py  mapper.py  repository.py  settings.py
personal_website/data/: animals.yml  events.yml  people.yml
personal_website/event/: dto.py  mapper.py  repository.py
personal_website/person/: dto.py  mapper.py  repository.py
personal_website/services/: github.py
personal_website/themes/core/templates/: article.html  base.html  family.html  index.html  page.html  projects.html
posts/: 3d-perception-for-robotics.html  a-new-beginning-for-my-blog-site.html  a-new-chapter-for-technical-writing.html  cnn-aerial-cactus-classification.html  commit-your-code-they-said.html  creating-a-base-model-in-django.html  data-gathering-service-using-flask-heroku-deployment.html  data-gathering-service-using-flask-services-and-scheduling.html  data-gathering-service-using-flask-structure-and-data.html  discord-bots-in-python.html  ghost-day-applied-machine-learning-conference.html  how-to-use-fastapi-for-microservices.html  i-am-oficially-a-phd-dropout.html  iota-hackathon.html  lets-talk-solid-in-python.html  monte-carlo-localization-in-robotics.html  openbeer-govtech.html  p-controller-for-robot-control.html  path-to-minimalism.html  personal-2020-year-review.html  polymorphic-models-in-django.html  potential-fields-in-path-planning.html  predicting-world-of-warcraft-item-buyout-prices.html  printhello-world.html  providing-feature-handlers-in-an-elegant-way-in-python.html  pycode-conference-2019.html  reading-a-database-into-pandas.html  rough-mereology-nxt-robot-navigation.html  rough-mererology-nxt-robot-navigation.html  running-ros-on-windows-10.html  scraping-dynamic-pages-with-python-playwright-and-aws-lambda.html  setup-wsl-for-data-science-in-windows.html  simultaneous-localization-and-mapping-for-robotic-problems.html  tdd-for-django-using-pytest.html  thirty-year-summary.html  transform-forward-camera-to-top-view.html
src/content/articles/: 2021_02_24_django_polymorphic.md  2021_05_17_feature_handlers.md  2025_07_21_new_chapter.md
src/content/pages/: about.md
src/core/: settings.py
tests/animal/: animal_mapper_test.py  animal_repository_test.py  conftest.py
tests/core/: mapper_test.py  repository_test.py
tests/event/: conftest.py  event_mapper_test.py  event_repository_test.py
tests/person/: conftest.py  person_mapper_test.py  person_repository_test.py
tests/services/: conftest.py  github_test.py
(+10 files in other folders)
